# agentic-cursorrules

./: README.md  main.py  pyproject.toml
agentic_cursorrules/: __init__.py  agent_generator.py  config_updater.py  project_tree_generator.py  smart_analyzer.py
tests/: test_generator.py
